@@ -10,6 +10,8 @@
                                -- ChangeLog --
 ngIRCd 0.11.1
 
+ - Fix sending of JOINs between servers when remote server appended mode
+   flags. (Rolf Eike Beer) [from HEAD]
  - send "G" instead of "H" flag in WHO replies (reported by Dana Dahlstrom).
  - Under some circumstances ngIRCd issued
  channel MODE message with a trailing space. (Dana Dahlstrom) [from HEAD]
@@ -738,4 +740,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.332.2.8 2008/02/26 12:06:57 fw Exp $
+$Id: ChangeLog,v 1.332.2.9 2008/02/26 12:07:41 fw Exp $
